Completed rest of the project
few conflicts but good in the end

--- a/dr_layout.css
+++ b/dr_layout.css
@@ -4,7 +4,7 @@
    Tutorial 1
    Case Problem 3
    Filename: dr_layout.css
-
+	Jeremiah Ruiz
    This file contains the layout styles used at Diane's Run
 
 */
